Bug 354001 - User Manager is missing avatar gallery
Summary: User Manager is missing avatar gallery
Status: RESOLVED FIXED
Alias: None
Product: user-manager
Classification: Unmaintained
Component: kcontrol module (other bugs)
Version First Reported In: 5.4.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-17 14:10 UTC by Kai Uwe Broulik
Modified: 2016-06-01 09:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2015-10-17 14:10:54 UTC
User manager only gives you the choice to load an avatar (face icon) from the filsystem or clear it. The avatar gallery listing bundled avatars, kcm useraccounts had, is missing.

Reproducible: Always

Steps to Reproduce:
1. Click the face button next to the username
2. 
3.

Actual Results:  
No avatar gallery, only face from filesystem

Expected Results:  
Option to show avatar gallery and choose avatar from there
Comment 1 Kai Uwe Broulik 2016-06-01 09:45:49 UTC
Git commit 13d6d587c27a9ad8cc5463b1c1a3cac617bf5325 by Kai Uwe Broulik.
Committed on 01/06/2016 at 09:45.
Pushed by broulik into branch 'master'.

Port avatar gallery from kcm_useraccounts to user-manager

REVIEW: 126151
FIXED-IN: 5.7.0

M  +5    -2    src/CMakeLists.txt
M  +19   -0    src/accountinfo.cpp
M  +1    -0    src/accountinfo.h
A  +70   -0    src/avatargallery.cpp     [License: GPL (v2+)]
A  +45   -0    src/avatargallery.h     [License: GPL (v2+)]
A  +58   -0    src/avatargallery.ui
A  +-    --    src/pics/Ada Lovelace.png
A  +-    --    src/pics/Alice in Wonderland.png
A  +-    --    src/pics/Blackbox.png
A  +2    -0    src/pics/CMakeLists.txt
A  +-    --    src/pics/Dragon.png
A  +-    --    src/pics/Grace Hopper.png
A  +-    --    src/pics/Green.png
A  +-    --    src/pics/Happy.png
A  +-    --    src/pics/Kati.png
A  +-    --    src/pics/Konqui.png
A  +-    --    src/pics/Leonardo da Vinci.png
A  +-    --    src/pics/Listening.png
A  +-    --    src/pics/Logger.png
A  +-    --    src/pics/Mahatma Gandhi.png
A  +-    --    src/pics/Mowgli jungle book.png
A  +-    --    src/pics/Notme.png
A  +-    --    src/pics/Parley.png
A  +-    --    src/pics/Rekonqui.png
A  +-    --    src/pics/TV.png
A  +-    --    src/pics/User.png
A  +-    --    src/pics/bomb.png
A  +238  -0    src/pics/sources/Ada Lovelace.svg
A  +210  -0    src/pics/sources/Alice in Wonderland.svg
A  +1623 -0    src/pics/sources/Dragon.svg
A  +198  -0    src/pics/sources/Grace Hopper.svg
A  +1598 -0    src/pics/sources/Kati.svg
A  +1580 -0    src/pics/sources/Konqui.svg
A  +199  -0    src/pics/sources/Leonardo da Vinci.svg
A  +1533 -0    src/pics/sources/Logger.svg
A  +202  -0    src/pics/sources/Mahatma Gandhi.svg
A  +356  -0    src/pics/sources/Mowgli jungle book.svg
A  +1607 -0    src/pics/sources/Parley.svg
A  +1676 -0    src/pics/sources/Rekonqui.svg
A  +163  -0    src/pics/sources/User.svg
A  +-    --    src/pics/sources/blackbox.svgz
A  +-    --    src/pics/sources/bomb.svgz
A  +-    --    src/pics/sources/green.svgz
A  +-    --    src/pics/sources/happy.svgz
A  +-    --    src/pics/sources/listening.svgz
A  +-    --    src/pics/sources/notme.svgz
A  +-    --    src/pics/sources/tv.svgz

http://commits.kde.org/user-manager/13d6d587c27a9ad8cc5463b1c1a3cac617bf5325