Port avatar gallery from kcm_useraccounts to user-manager

REVIEW: 126151
BUG: 354001
FIXED-IN: 5.7.0